--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>RHCP By Organic</title>
         <link rel="stylesheet" href="css/template.css" type="text/css" />
         <link rel="stylesheet" href="css/font-awesome.css" type="text/css" />
+        <link rel="stylesheet" href="css/mediaquery.css" type="text/css">
         <meta charset=utf-8>
     </head>
     <body>
@@ -24,20 +25,20 @@
             </div>
             <div class="arrow-down"></div>
           <ul>
-            <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
-            <li><a href="#"><i class="fa fa-info-circle"></i>Agenda de Shows</a></li>
+            <li><a href="#" class="active"><i class=""></i>Home</a></li>
+            <li><a href="#"><i class=""></i>Agenda de Shows</a></li>
             <li>
-              <a href="#"><i class="fa fa-laptop"></i>Galeria<i class="fa fa-caret-down"></i></a>
+              <a href="#"><i class=""></i>Galeria<i class="fa fa-caret-down"></i></a>
               <ul>
                 <li><a href="#">Fotos</a></li>
                 <li><a href="#">Vídeos</a></li>
               </ul>
             </li>
-            <li><a href="#"><i class="fa fa-phone"></i>Repertório</a></li>
-            <li><a href="#"><i class="fa fa-phone"></i>Blog</a></li>
-            <li><a href="#"><i class="fa fa-phone"></i>Links</a></li>
-            <li><a href="#"><i class="fa fa-phone"></i>Loja</a></li>
-            <li><a href="#"><i class="fa fa-phone"></i>Contato e Agendamento</a></li>
+            <li><a href="#"><i class=""></i>Repertório</a></li>
+            <li><a href="#"><i class=""></i>Blog</a></li>
+            <li><a href="#"><i class=""></i>Links</a></li>
+            <li><a href="#"><i class=""></i>Loja</a></li>
+            <li><a href="#"><i class=""></i>Contato e Agendamento</a></li>
           </ul>
           <a href="#" id="showmenu">
             <i class="fa fa-bars"></i>
@@ -46,7 +47,7 @@
         <!-- FIM - MENU VERTICAL -->
 
         <!-- CONTEUDO -->
-        <div id="conteudo" class="left show">
+        <div id="conteudo" class="right show">
           <h2>Hello World!</h2>
         </div>
 
