interrompendo Slider para teste

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="bootstrap.min.js"></script>
         
         <link rel="stylesheet" href="css/carousel.css" type="text/css">
 
