--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         
         <link rel="stylesheet" href="css/carousel.css" type="text/css">
 
@@ -116,15 +116,16 @@
         <li data-target="#myCarousel" data-slide-to="2" class=""></li>
       </ol>
       <div class="carousel-inner" role="listbox">
+
         <div class="item active">
           <div class="container">
-            <div class="col-sm-12">
                 <div class="carousel-caption">
+                    <div class="slider-1">
                     <h1>Próximo Show</h1>
                     <h1 class="subtitle-carousel">Rio de Janeiro</h1>
 
                     <div class="iframe-style">
-
+<!--
             <div class="time-num">
                 <div class="countdown-title">95</div> 
                 <div class="countdown-subtitle">dias</div>
@@ -141,13 +142,14 @@
                 <div class="countdown-title">15</div> 
                 <div class="countdown-subtitle">segundos</div>
             </div>
-
-                        <!--<div data-countdown="2016/08/01"></div>-->
+-->
+                        <div data-countdown="2016/08/01"></div>
+                        </div>
                     </div>
                 </div>
             </div>
-          </div>
         </div>
+
         <div class="item">
           <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
           <div class="container">
